# ScikitFastApi

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py  schemas.py  service.py  settings.py
model/: metadata.json  model.joblib
notebooks/: train_model.ipynb
tests/: test_health.py  test_model_info.py  test_predict.py
